--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -23,6 +23,12 @@
     line-height: 1.5;
 }
 
+.about-desc > a {
+    text-decoration: none;
+    margin-top: 80px;
+    font-size:30px;
+}
+
 .about-img {
     width: 45%;
     display: flex;
@@ -58,4 +64,6 @@
     .about-img > img {
         width: 100%;
     }
+
+   
 }
